# CSM_LAB

./: CMakeLists.txt  README.md  globalogic_task_Bozhyk.sln
FileSearchLib/include/: FileSearch.h
FileSearchLib/src/: FileSearch.cpp
globalogic_task_Bozhyk/: globalogic_task_Bozhyk.cpp  globalogic_task_Bozhyk.vcxproj  globalogic_task_Bozhyk.vcxproj.filters  main.cpp
globalogic_task_Bozhyk/Debug/: globalogic_task_Bozhyk.exe.recipe  globalogic_task_Bozhyk.ilk  vc142.idb
globalogic_task_Bozhyk/Debug/globalog.519de024.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  globalogic_task_Bozhyk.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
mylib/Debug/: FileSearch.idb  FileSearch.lib
mylib/FileSearch/: FileSearch.cpp  FileSearch.h  FileSearch.vcxproj  FileSearch.vcxproj.filters
mylib/FileSearch/Debug/: FileSearch.pch
mylib/FileSearch/Debug/FileSearch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FileSearch.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
